improved etymology logic