@@ -1,6 +1,8 @@
 package org.getalp.dbnary.languages.fra;
 
+import org.getalp.dbnary.languages.eng.Etymology;
 import org.getalp.dbnary.wiki.WikiText;
+import org.getalp.dbnary.wiki.WikiTool;
 import org.getalp.iso639.ISO639_3;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -23,11 +25,11 @@ public class FrenchEtymology {
   // mapping des mots , faudra l'enrichir
   static {
 
-    tmp.put("INHERITANCE", Arrays.asList("[Dd]e", "[Dd]u", "[Dd]epuis", "[iI]ssue d[eu]"));
-    tmp.put("BORROWING", Arrays.asList("[Ee]mprunt[*]", "[Cc]alqu[*]"));
-    tmp.put("COGNATE", List.of("[Cc]ognat(e)?[*]"));
-
-
+    tmp.put("INHERITANCE", Arrays.asList("[Dd]e", "[Dd]u", "[Dd]epuis", "[iI]ssue d[eu]","[Vv]enant d[eu]", "[Vv]ient d[eu]"));
+    tmp.put("BORROWING", Arrays.asList("[Ee]mprunté à", "[Cc]alqué d[eu]" , "[Ff]ormé d[eu]"));
+    tmp.put("COGNATE", List.of("[Cc]ognat(e)?"));
+    tmp.put("FORM",Arrays.asList("[Ff]orm(e)?"));
+    tmp.put("PHONETIC",Arrays.asList("[Pp]rononciation"));
   }
 
   public WikiText etymology;
@@ -42,7 +44,7 @@ public class FrenchEtymology {
     this.pageName = pageName;
   }
 
-  public void check() {
+  public void extractEtymology() {
     List<String> list = new ArrayList<>();
     for (WikiText.Token t : etymology.tokens()) {
       Arrays.stream(getLinkedTemplatesAsString(t)).iterator().forEachRemaining(list::add);
@@ -55,16 +57,24 @@ public class FrenchEtymology {
   }
 
 
-  private String[] getLinkedTemplatesAsString(WikiText.Token t) {
+  /**
+   *
+   * @param t a WikiText.Token is a part of the etymology description of a word , usually each token contians a type of information ,
+   * @return an array of strings, each string contains a template and the informations related to that template
+   */
 
-    return t.toString().split(",");
+  private String[] getLinkedTemplatesAsString(WikiText.Token t) {
+    return WikiTool.splitUnlessInTemplateOrLink(t.toString(),',').toArray(String[]::new);
   }
 
 
   /*
    * This method extracts the FSymbols from the given text ,
    */
+
+
   private FSymbols getFSymbols(String text) {
+
     String regex = "(\\{\\{[^}]+}})" + // templates
         "|(''{2}[^']+''{2})" + // italique
         "|([A-Za-zÀ-ÿ’]+)";
@@ -84,22 +94,27 @@ public class FrenchEtymology {
     }
 
 
+
     FSymbols fsymbols = new FSymbols("none");
 
 
     // faut faire une recherche
 
+
     fragment = fragment.stream().toList();
     int indiceFrangment = 0;
 
+    // while fragment not finished and keyWord not found : continue
     while (indiceFrangment < fragment.size() && !exists(tmp, fragment.get(indiceFrangment))) {
       indiceFrangment++;
     }
+    // if keyWord found : set relationShip and add templates
     if (indiceFrangment < fragment.size()) {
       fsymbols.setRelationShip(getKeyFromValue(tmp, fragment.get(indiceFrangment)));
       for (int i = indiceFrangment + 1; i < fragment.size(); i++) {
         fsymbols.addTemplates(new WikiText(fragment.get(i)).templates());
       }
+      // if keyWord not found : set relationShip to none ,all none relationships get removed
     } else {
       fsymbols = new FSymbols("none");
     }
@@ -152,14 +167,7 @@ public class FrenchEtymology {
   }
 
 
-  private void finishFSymbols(FSymbols fsymbols) {
-    WikiText t = new WikiText(pageName);
-    System.out.println(t.toString());
-
-  }
-
-
-  public String getWordFromTemplateList(List<WikiText.Template> templates) throws Exception {
+  public String getWordFromTemplateList(List<WikiText.Template> templates){
     switch (templates.size()) {
       case 1:
         return getTemplateWord(templates.getFirst());
@@ -175,7 +183,7 @@ public class FrenchEtymology {
     }
   }
 
-  public String getTemplateWord(WikiText.Template t) throws Exception {
+  public String getTemplateWord(WikiText.Template t)  {
     switch (t.getName()) {
       case "étyl":
         try {
@@ -197,8 +205,13 @@ public class FrenchEtymology {
         } catch (NullPointerException e) {
           return e.toString();
         }
-      default:
-        throw new Exception("template non recon");
+
+
+
+      case "lien":
+        return t.getArg("1").toString();
+        default:
+        return "null-word";
 
 
     }
@@ -243,4 +256,5 @@ public class FrenchEtymology {
         return "template non recon";
     }
   }
+
 }
